Feature/storm 5 (#8)
* Add static metamodel to support type safe queries
* Add groupBy, having, orderBy and limit logic to query builder
* Allow Json annotation to specify whether unknown/missing properties should lead to failure
* Refactor RepositoryLookup's "proxy" method to "repository'